[package]
name = "api"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart", "macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-full"] }
bytes = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }

mongodb = "3"
bson = { version = "2", features = ["chrono-0_4"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }

chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

futures = "0.3"
thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
dotenvy = "0.15"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
